# bs_solana2

./: Edition2024ErrorReport.md  README.md
bitsave/: .gitignore  Anchor.toml  package.json  txtx.yml
bitsave/programs/bitsave/: Cargo.toml
bitsave/programs/bitsave/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
bitsave/runbooks/: README.md
bitsave/runbooks/deployment/: main.tx
bitsave/tests/: bitsave.ts  test.md
